--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "azure-functions-runner",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Runs the azure functions project on Mac OS or linux",
   "main": "js/index.js",
   "preferGlobal": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "env": "node scripts/setup_env.js"
   },
   "keywords": [
     "typescript"
@@ -21,12 +22,17 @@
     "typescript": "^2.3.4"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "fs-extra": "^3.0.1",
     "http-status-codes": "^1.1.6",
     "nopt": "^4.0.1",
     "nopt-usage": "^0.1.0",
+    "os": "^0.1.1",
+    "readline": "^1.3.0",
     "stream": "0.0.2"
   }
 }
