--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-winston": "^2.4.0",
     "fs-extra": "^3.0.1",
     "http-status-codes": "^1.1.6",
+    "morgan": "^1.8.2",
     "nopt": "^4.0.1",
     "nopt-usage": "^0.1.0",
     "os": "^0.1.1",
     "readline": "^1.3.0",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "winston": "^2.3.1"
   }
 }
