--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Runs the azure functions project on Mac OS or linux",
   "main": "js/index.js",
   "preferGlobal": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "env": "node scripts/setup_env.js"
-  },
+  "scripts": {},
   "keywords": [
     "typescript"
   ],
